--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
 	</header>
 	<div class="container">
 		<div class="left">
-			<p class="intro">As humans, we made machines adapt to our language, but we adapted to theirs as well.</p>
-			<p>You are in an elevator. You just came back from vacations, this is January 3rd. A collegue joins you...</p>
+			<p class="intro">We made machines adapt to our language, but we adapted to theirs as well.</p>
+			<p>January 3rd, you just came back from vacation. Coffee in hand and feeling recharged, you tell yourself; “I can work, I can work”. It's raining. With a cynical positivity you enter the elevator, music is playing. And just as the door are about to close, a colleague joins you. You do not know him. Let the awkward conversation begin.</p>
 		</div>
 		<div class="right">
-			<a href="">
-				<img src="imgs/cta.png" width="230" alt="">
+			<a href="http://m.me/itsalivetestbot." target="_blank">
+				<img src="imgs/cta.png" width="230" alt="Interact with the beign"><br>
 			</a>
+			Say <b>test:1d9b</b> to talk to the beign
 		</div>
 		</p>
 	</div>
